--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
     </style>
+    <script src='/socket.io/socket.io.js'>
+      var socket = io();
+    </script>
   </head>
   <body>
     <ul id="messages"></ul>
