--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
     </style>
-    <script src='/socket.io/socket.io.js'>
-      var socket = io();
+    <script src='/socket.io/socket.io.js' ></script>
+    <script>
+      $(function () {
+        var socket = io();
+        $('form').submit(function(e) {
+          e.preventDefault();
+          socket.emit('chat message', $('#m').val());
+          $('#m').val('');
+          return false;
+        });
+      });
+      
     </script>
   </head>
   <body>
