--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <html lang="en">
 <head>
   <title>Socket.IO chat</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <style></style>
-  <script>
-    
-  </script>
+  <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
-    <h3>Howdy</h3>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="well">
+            <h3>Online Users</h3>
+            <ul class="list-group" id="users"></ul>
+          </div>
+        </div>
+
+        <div class="col-md-8">
+          <div class="chat" id="chat"></div>
+          <form id="messageForm">
+            <div class="form-group">
+              <label>Enter message</label>
+              <textarea class="" id="" cols="30" rows="10"></textarea>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
