--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <title>Socket.IO chat</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" src="./style.css"></link>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <style></style>
   <script src="/socket.io/socket.io.js"></script>
-  </head>
+</head>
   <body>
     <div class="container">
       <div class="row">
@@ -22,11 +22,21 @@
           <form id="messageForm">
             <div class="form-group">
               <label>Enter message</label>
-              <textarea class="" id="" cols="30" rows="10"></textarea>
+              <textarea class="form-control" id="message"></textarea>
+              <br />
+              <input type="submit" class="btn btn-primary" value="Send Message" />
             </div>
           </form>
         </div>
       </div>
     </div>
+    <script>
+      $(function() {
+        let socket = io.connect();
+        let $messageForm = $('messageForm');
+        let $message = $('message');
+        let $chat = $('chat');
+      })
+    </script>
   </body>
 </html>
