--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Socket.IO chat</title>
   <link rel="stylesheet" type="text/css" src="./style.css"></link>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
 </head>
   <body>
@@ -36,6 +36,12 @@
         let $messageForm = $('messageForm');
         let $message = $('message');
         let $chat = $('chat');
+
+        $messageForm.submit(function(e) {
+          e.preventDefault();
+          socket.emit('send message', $message.val());
+          $message.val('');
+        })
       })
     </script>
   </body>
