--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <title>Socket.IO chat</title>
   <link rel="stylesheet" type="text/css" src="./style.css"></link>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="./app.js"></script>
   <script src="/socket.io/socket.io.js"></script>
 </head>
   <body>
@@ -30,19 +29,6 @@
         </div>
       </div>
     </div>
-    <script>
-      $(function() {
-        let socket = io.connect();
-        let $messageForm = $('messageForm');
-        let $message = $('message');
-        let $chat = $('chat');
-
-        $messageForm.submit(function(e) {
-          e.preventDefault();
-          socket.emit('send message', $message.val());
-          $message.val('');
-        })
-      })
-    </script>
+    
   </body>
 </html>
