--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title>Socket.IO chat</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
+  <script defer src="http://localhost:5000/socket.io/socket.io.js"></script>
+  <script defer src="app.js"></script>
 </head>
   <body>
     <div class="chatbox">  
