--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
   <script defer src="http://localhost:5000/socket.io/socket.io.js"></script>
-  <script defer src="app.js"></script>
+  <script defer src="./app.js"></script>
 </head>
   <body>
     <div class="chatbox">  
       <div id="message-container"></div>
        <br />
       <form id="send-container">
-          <input type="text" id="message-input"  />
+          <input type="text" id="message-input"/>
           <br />
-          <input type="submit" id="send-button" value="Send" />
+          <input type="submit" id="send-button" value="Send"/>
       </form>
     </div>
   </body>
